--- a/SmartImageTool/package.json
+++ b/SmartImageTool/package.json
@@ -3,13 +3,9 @@
 "version": "1.0.0",
 "main": "generateScript.js",
 "scripts": {
-"start": "node generateScript.js",
-"test": "echo \"Error: no test specified\" && exit 1"
+"start": "node generateScript.js"
 },
-"keywords": ["image", "tool", "smart"],
 "author": "Ronnie Garrison",
 "license": "MIT",
-"description": "Smart Image Tool using built-in Node.js modules",
-"dependencies": {}
+"description": "SmartImageTool with custom profile icon"
 }
-
